opam-version: "2.0"
name: "ppx_deriving_qcheck"
version: "0.4.1"
license: "BSD-2-Clause"
synopsis: "PPX Deriver for QCheck"

maintainer: "valentin.chb@gmail.com"
author: [ "the qcheck contributors" ]

depends: [
  "dune" {>= "2.8.0"}
  "ocaml" {>= "4.08.0"}
  "qcheck-core" {>= "0.19"}
  "ppxlib" {>= "0.22.0"}
  "ppx_deriving" {>= "5.2.1"}
  "odoc" {with-doc}
  "alcotest" {with-test & >= "1.4.0" }
  "qcheck-alcotest" {with-test & >= "0.17"}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

homepage: "https://github.com/c-cube/qcheck/"
bug-reports: "https://github.com/c-cube/qcheck/-/issues"
dev-repo: "git+https://github.com/vch9/ppx_deriving_qcheck.git"
