opam-version: "2.0"
maintainer: "simon.cruanes.2007@m4x.org"
author: [ "the qcheck contributors" ]
homepage: "https://github.com/c-cube/qcheck/"
license: "BSD-2-Clause"
synopsis: "Core QCheck library"
description: """
QCheck is a QuickCheck inspired property-based testing library for OCaml.

The `qcheck-core` library provides the core property-based testing API with
minimal dependendies: It requires only `unix` and `dune`."""
doc: ["http://c-cube.github.io/qcheck/"]
version: "0.25"
tags: [
  "test"
  "property"
  "quickcheck"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" { >= "2.8.0" }
  "base-unix"
  "alcotest" {with-test & >= "1.2.0"}
  "odoc" {with-doc}
  "ocaml" {>= "4.08.0"}
]
dev-repo: "git+https://github.com/c-cube/qcheck.git"
x-maintenance-intent: ["(latest)"]
bug-reports: "https://github.com/c-cube/qcheck/issues"
conflicts: [
  "ounit" { < "2.0" }
]
