opam-version: "2.0"
maintainer: "simon.cruanes.2007@m4x.org"
author: [ "the qcheck contributors" ]
license: "BSD-2-Clause"
homepage: "https://github.com/c-cube/qcheck/"
doc: ["http://c-cube.github.io/qcheck/"]
synopsis: "OUnit backend for QCheck"
description: """
QCheck is a QuickCheck inspired property-based testing library for OCaml.

The `qcheck-ounit` library provides an integration layer for `QCheck` onto
https://github.com/gildor478/ounit[`OUnit`], allowing to run property-based
tests in `OUnit`."""
version: "0.91"
tags: [
  "qcheck"
  "quickcheck"
  "ounit"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" { >= "2.8.0" }
  "base-unix"
  "qcheck-core" { = version }
  "ounit2"
  "odoc" {with-doc}
  "ocaml" {>= "4.08.0"}
]
dev-repo: "git+https://github.com/c-cube/qcheck.git"
x-maintenance-intent: ["(latest)"]
bug-reports: "https://github.com/c-cube/qcheck/issues"
