opam-version: "2.0"
maintainer: "simon.cruanes.2007@m4x.org"
author: [ "Simon Cruanes <simon.cruanes.2007@m4x.org>" ]
synopsis: "Compatibility package for qcheck"
homepage: "https://github.com/c-cube/qcheck/"
doc: ["http://c-cube.github.io/qcheck/"]
version: "0.10"
tags: [
  "test"
  "property"
  "quickcheck"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
run-test: [
  ["dune" "runtest" "-p" name]
]
depends: [
  "dune"
  "base-bytes"
  "base-unix"
  "qcheck-core" { >= "0.9" }
  "qcheck-ounit" { >= "0.9" }
  "odoc" {with-doc}
  "ocaml" {>= "4.03.0"}
]
dev-repo: "git+https://github.com/c-cube/qcheck.git"
bug-reports: "https://github.com/c-cube/qcheck/issues"
conflicts: [
  "ounit" { < "2.0" }
]
