(rule
 (enabled_if (and (= %{arch_sixtyfour} true) (>= %{ocaml_version} 5)))
 (action (copy QCheck_alcotest_test.expected.ocaml5.64 QCheck_alcotest_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} false) (>= %{ocaml_version} 5)))
 (action (copy QCheck_alcotest_test.expected.ocaml5.32 QCheck_alcotest_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} true) (< %{ocaml_version} 5)))
 (action (copy QCheck_alcotest_test.expected.ocaml4.64 QCheck_alcotest_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} false) (< %{ocaml_version} 5)))
 (action (copy QCheck_alcotest_test.expected.ocaml4.32 QCheck_alcotest_test.expected)))

;; implicitly compared against QCheck_runner_test.expected
(test
 (enabled_if (= %{os_type} "Unix"))
 (name QCheck_alcotest_test)
 (modules QCheck_alcotest_test)
 (deps ./QCheck_alcotest_test.exe)
 (package qcheck-alcotest)
 (libraries qcheck-core qcheck-alcotest alcotest)
 (action
  (with-accepted-exit-codes 1
   (setenv CI false ; Don't run tests as if Alcotest was run in CI
    (setenv QCHECK_SEED 1234
     (run ./run_alcotest.sh --color=never))))))
