(* -*- tuareg -*- *)

let dune = Printf.sprintf {|

(executables
  (names QCheck_ounit_test QCheck_test)
  (libraries ounit2 qcheck-ounit))

(rule
  (targets output.txt)
  (deps ./QCheck_ounit_test.exe)
  (enabled_if (= %%{os_type} "Unix"))
  (action
    (with-accepted-exit-codes
      1
      (with-stdout-to
        %%{targets}
        (run ./run_ounit.sh -runner=sequential -seed 1234)))))

(rule
  (alias runtest)
  (package qcheck-ounit)
  (enabled_if (= %%{os_type} "Unix"))
  (action (diff output.txt.expected.%i output.txt)))

|} Sys.word_size

let () = Jbuild_plugin.V1.send dune
