(executable
 (name QCheck_test)
 (modules QCheck_test)
 (libraries ounit2 qcheck-ounit))

(rule
 (enabled_if (and (= %{arch_sixtyfour} true) (>= %{ocaml_version} 5)))
 (action (copy QCheck_ounit_test.expected.ocaml5.64 QCheck_ounit_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} false) (>= %{ocaml_version} 5)))
 (action (copy QCheck_ounit_test.expected.ocaml5.32 QCheck_ounit_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} true) (< %{ocaml_version} 5)))
 (action (copy QCheck_ounit_test.expected.ocaml4.64 QCheck_ounit_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} false) (< %{ocaml_version} 5)))
 (action (copy QCheck_ounit_test.expected.ocaml4.32 QCheck_ounit_test.expected)))

;; implicitly compared against QCheck_runner_test.expected
(test
 (enabled_if (= %{os_type} "Unix"))
 (name QCheck_ounit_test)
 (modules QCheck_ounit_test)
 (deps ./QCheck_ounit_test.exe)
 (package qcheck-ounit)
 (libraries ounit2 qcheck-ounit)
 (action
  (with-accepted-exit-codes 1
   (run ./run_ounit.sh -runner=sequential -seed 1234))))
